src/parse/parse.rs
use crate::{
    analyze::analyze::{Analyzer, BaseType, InCompleteKind, Type},
    error::{CompileError, CompileErrorKind, ParseErrorKind, VariableKind},
    tokenize::{
        debug_infos::DebugInfo,
        tokenize::{
            AssignBinOpToken, BinOpToken, DelimToken, Token, TokenKind, TokenStream, TypeToken,
        },
    },
    unimplemented_err,
};
use std::{collections::BTreeMap, fmt::Debug};

use super::{
    declaration::{
        Declaration, DeclarationSpecifier, Declarator, DirectDeclarator, Initializer,
        StorageClassSpecifier, StructDeclaration, StructOrUnionSpec, TypeSpecifier,
    },
    parser_context::{ParserContext, ParserContextKind},
};

pub struct Parser {
    scope: Scope,
    pub context: ParserContext,
}

impl Parser {
    pub fn new() -> Self {
        Self {
            scope: Scope::new(),
            context: ParserContext::new(),
        }
    }
    pub fn parse_program<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Program, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut program = Program::new();
        while !tokens.at_eof() {
            if tokens.consume(&TokenKind::Asm) {
                tokens.expect(&TokenKind::OpenDelim(DelimToken::Paren))?;
                let token = tokens.next().ok_or_else(|| {
                    CompileError::new_unexpected_eof(None, Box::new("TokenKind::Str(_)"))
                })?;
                if let TokenKind::Str(string) = *token.kind {
                    let debug_info = token.debug_info;
                    let string = Self::parse_string_literal(string, tokens)?;
                    tokens.expect(&TokenKind::CloseDelim(DelimToken::Paren))?;
                    tokens.expect(&TokenKind::Semi)?;
                    program.push(ProgramComponent::new(
                        ProgramKind::InlineAsm(string),
                        debug_info,
                    ));
                } else {
                    return Err(CompileError::new_expected_failed(
                        Box::new("TokenKind::Str(_)"),
                        token,
                    ));
                }
                continue;
            }
            let mut tmp_tokens = tokens.clone();
            let component = {
                let declaration = self.parse_declaration(&mut tmp_tokens, true)?;
                if Some(TokenKind::Semi) == tmp_tokens.peek_kind() {
                    tmp_tokens.expect(&TokenKind::Semi).unwrap();
                    *tokens = tmp_tokens;
                    let debug_info = declaration.debug_info.clone();
                    ProgramComponent::new(ProgramKind::Declaration(declaration), debug_info)
                } else {
                    self.parse_func_def(tokens)?
                }
            };
            program.push(component);
        }
        tokens.expect(&TokenKind::Eof)?;
        assert!(tokens.next().is_none());
        Ok(program)
    }

    pub fn parse_func_def<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<ProgramComponent, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let (type_spec, debug_info) = self.parse_type_specifier(tokens, true)?;
        let n_star = Self::parse_pointer(tokens)?;
        let direct_declarator = self.parse_direct_declarator(tokens)?;
        // have to be block stmt
        tokens.expect(&TokenKind::OpenDelim(DelimToken::Brace))?;
        self.scope.scope_push();
        let mut stmts = Vec::new();
        while !tokens.consume(&TokenKind::CloseDelim(DelimToken::Brace)) {
            stmts.push(self.parse_stmt(tokens)?);
        }
        self.scope.scope_pop();
        let body = Stmt::new_block(stmts, debug_info.clone());
        let kind = ProgramKind::new_funcdef(type_spec, n_star, direct_declarator, body);
        Ok(ProgramComponent::new(kind, debug_info))
    }

    /// arg: `consider_typedef_specifier` should be true when calling out of this function.
    pub fn parse_declaration<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
        consider_typedef_specifier: bool, // default: true
    ) -> Result<Declaration, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut tmp_tokens = tokens.clone();
        // TODO: todo!("impl declaration specifiers");
        // <declaration-specifiers> := <type-specifiers>
        // first element of direct declarator is Ident
        let (declaration_specifiers, debug_info) =
            self.parse_declaration_specifiers(&mut tmp_tokens, consider_typedef_specifier)?;

        // <pointer>*
        let n_star = Self::parse_pointer(&mut tmp_tokens)?;
        if tmp_tokens.peek_expect(&TokenKind::Semi) {
            *tokens = tmp_tokens;
            // InitDeclarator is None
            return Ok(Declaration {
                declaration_specifiers,
                init_declarator: None,
                debug_info,
            });
        }
        let direct_declarator = self.parse_direct_declarator(&mut tmp_tokens);
        let direct_declarator = if matches!(
            &direct_declarator,
            &Err(CompileError {
                kind: CompileErrorKind::ParseError(ParseErrorKind::IdentExpectFailed { got: _ }),
            }),
        ) {
            // redefine typeof ident
            // such as...
            // typedef int int2;
            // { typedef char int2; }
            let mut has_typedef = false;
            let mut has_only_one_typedefed_typespecifier = false;
            for specifier in &declaration_specifiers {
                if DeclarationSpecifier::StorageClass(StorageClassSpecifier::Typedef) == *specifier
                {
                    has_typedef = true;
                } else if let DeclarationSpecifier::Type(TypeSpecifier::TypeDefName(_)) = specifier
                {
                    if has_only_one_typedefed_typespecifier {
                        has_only_one_typedefed_typespecifier = false;
                        break;
                    }
                    has_only_one_typedefed_typespecifier = true;
                }
            }
            if has_typedef && has_only_one_typedefed_typespecifier {
                return self.parse_declaration(tokens, false);
            }
            direct_declarator?; // return Err

            unreachable!()
        } else {
            direct_declarator.unwrap()
        };
        *tokens = tmp_tokens;
        let init = if tokens.consume(&TokenKind::BinOpEq(AssignBinOpToken::Eq)) {
            Some(self.parse_initializer(tokens)?)
        } else {
            None
        };

        if !declaration_specifiers.contains(&DeclarationSpecifier::StorageClass(
            StorageClassSpecifier::Typedef,
        )) {
            return Ok(Declaration::new(
                declaration_specifiers,
                n_star,
                direct_declarator,
                init,
                debug_info,
            ));
        }

        // typedef declaration

        let ident_name = direct_declarator.ident_name().to_string();

        let declaration = Declaration::new(
            declaration_specifiers,
            n_star,
            direct_declarator,
            init,
            debug_info.clone(),
        );

        // register type map
        let ty = declaration.ty(&mut Analyzer::new_for_parser(), debug_info.clone())?;
        self.scope
            .register_typedef_name(ident_name, ty, debug_info)?;

        Ok(declaration)
    }

    pub fn parse_declarator<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Declarator, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        Ok(Declarator::new(
            Self::parse_pointer(tokens)?,
            self.parse_direct_declarator(tokens)?,
        ))
    }

    pub fn parse_direct_declarator<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<DirectDeclarator, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut direct_declarator = if tokens.consume(&TokenKind::OpenDelim(DelimToken::Paren)) {
            // "(" <declaration> ")"
            let direct_declarator =
                DirectDeclarator::Declarator(Box::new(self.parse_declarator(tokens)?));
            tokens.expect(&TokenKind::CloseDelim(DelimToken::Paren))?;
            direct_declarator
        } else {
            // <ident>
            DirectDeclarator::Ident(tokens.consume_ident()?.0)
        };
        loop {
            if tokens.consume(&TokenKind::OpenDelim(DelimToken::Paren)) {
                // function declaration
                if tokens.consume(&TokenKind::CloseDelim(DelimToken::Paren)) {
                    // e.g) `main()`
                    // no arg func should be considered as a flexible arg function
                    direct_declarator =
                        DirectDeclarator::Func(Box::new(direct_declarator), Vec::new(), true);
                    continue;
                } else if tokens.peek_expect(&TokenKind::Type(TypeToken::Void)) {
                    let mut tmp_tokens = tokens.clone();
                    tmp_tokens.next();
                    if tmp_tokens.consume(&TokenKind::CloseDelim(DelimToken::Paren)) {
                        // no arg func with void should be considered as a **not** flexible arg function
                        *tokens = tmp_tokens;
                        direct_declarator =
                            DirectDeclarator::Func(Box::new(direct_declarator), Vec::new(), false);
                        continue;
                    }

                    // not flexible arg function
                }
                let mut args = Vec::new();
                args.push(self.parse_declaration(tokens, true)?);
                let mut is_flexible = false;
                while tokens.consume(&TokenKind::Comma) {
                    if tokens.consume(&TokenKind::DotDotDot) {
                        is_flexible = true;
                        break;
                    }
                    args.push(self.parse_declaration(tokens, true)?);
                }
                direct_declarator =
                    DirectDeclarator::Func(Box::new(direct_declarator), args, is_flexible);
                tokens.expect(&TokenKind::CloseDelim(DelimToken::Paren))?;
            } else if tokens.consume(&TokenKind::OpenDelim(DelimToken::Bracket)) {
                if tokens.consume(&TokenKind::CloseDelim(DelimToken::Bracket)) {
                    direct_declarator = DirectDeclarator::Array(Box::new(direct_declarator), None);
                } else {
                    let expr = self.parse_assign(tokens)?;
                    direct_declarator =
                        DirectDeclarator::Array(Box::new(direct_declarator), Some(expr));
                    tokens.expect(&TokenKind::CloseDelim(DelimToken::Bracket))?;
                }
            } else {
                break;
            }
        }
        Ok(direct_declarator)
    }

    pub fn parse_initializer<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Initializer, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        if tokens.consume(&TokenKind::OpenDelim(DelimToken::Brace)) {
            let init_list = self.parse_initializer_list(tokens)?;
            tokens.consume(&TokenKind::Comma);
            tokens.expect(&TokenKind::CloseDelim(DelimToken::Brace))?;
            Ok(Initializer::Array(init_list))
        } else {
            self.context
                .push_ctx(ParserContextKind::TopFuncArgs, false)?;
            let expr = self.parse_assign(tokens)?;
            self.context.pop(ParserContextKind::TopFuncArgs)?;
            Ok(Initializer::Expr(expr))
        }
    }

    pub fn parse_initializer_list<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Vec<Initializer>, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut init_list = Vec::new();
        init_list.push(self.parse_initializer(tokens)?);
        while tokens.peek_expect(&TokenKind::Comma) {
            let mut tmp_tokens = tokens.clone();
            tmp_tokens.next();
            if tmp_tokens.peek_expect(&TokenKind::CloseDelim(DelimToken::Brace)) {
                // <initializer> := "{" <initializer-list> , "}""
                break;
            }
            tokens.next(); // -> ","
            init_list.push(self.parse_initializer(tokens)?);
        }
        Ok(init_list)
    }

    pub fn parse_type_specifier<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
        consider_typedef_specifier: bool,
    ) -> Result<(TypeSpecifier, DebugInfo), CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let peeked = tokens.peek().cloned();
        match peeked {
            Some(Token { kind, debug_info }) => match *kind {
                TokenKind::Type(TypeToken::Int) => {
                    tokens.next();
                    Ok((TypeSpecifier::Int, debug_info))
                }
                TokenKind::Type(TypeToken::Char) => {
                    tokens.next();
                    Ok((TypeSpecifier::Char, debug_info))
                }
                TokenKind::Type(TypeToken::Void) => {
                    tokens.next();
                    Ok((TypeSpecifier::Void, debug_info))
                }
                TokenKind::Struct => {
                    tokens.next();
                    Ok((
                        TypeSpecifier::StructOrUnion(self.parse_struct_or_union_specifier(tokens)?),
                        debug_info,
                    ))
                }
                TokenKind::Enum => {
                    tokens.next();
                    Ok((
                        TypeSpecifier::Enum(Self::parse_enum_specifier(tokens)?),
                        debug_info,
                    ))
                }
                TokenKind::Ident(ident) if consider_typedef_specifier => {
                    if let Some(ty) = self.scope.look_up_typedef_name(&ident) {
                        tokens.next();
                        Ok((TypeSpecifier::TypeDefName(ty), debug_info))
                    } else {
                        Err(unimplemented_err!(
                            debug_info,
                            format!("unknown type specifier: {}", ident)
                        ))
                    }
                }
                _ => Err(CompileError::new_expected_failed(
                    Box::new("TokenKind::Type(_) | TokenKind::Struct".to_string()),
                    Token::new(*kind, debug_info),
                )),
            },
            None => Err(CompileError::new_unexpected_eof(
                None,
                Box::new("ToKenKind::Type(_)"),
            )),
        }
    }

    pub fn parse_declaration_specifiers<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
        consider_typedef_specifier: bool,
    ) -> Result<(Vec<DeclarationSpecifier>, DebugInfo), CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut specifiers = Vec::new();
        let mut first_debug_info = None;
        loop {
            let ty_spec = self.parse_type_specifier(tokens, consider_typedef_specifier);
            if let Ok((ty_spec, debug_info)) = ty_spec {
                first_debug_info.get_or_insert(debug_info);
                specifiers.push(DeclarationSpecifier::Type(ty_spec));
                continue;
            }

            let storage_class = Self::parse_storage_class_specifier(tokens);
            if let Ok((storage_class_specifier, debug_info)) = storage_class {
                first_debug_info.get_or_insert(debug_info);
                specifiers.push(DeclarationSpecifier::StorageClass(storage_class_specifier));
                continue;
            }
            break;
        }
        first_debug_info.map_or_else(
            || {
                tokens.peek_debug_info().map_or_else(
                    || {
                        Err(CompileError::new_unexpected_eof(
                            None,
                            Box::new("declaration specifier expected, but got EOF."),
                        ))
                    },
                    |debug_info| {
                        Err(unimplemented_err!(
                            debug_info,
                            "At least one declaration specifier required."
                        ))
                    },
                )
            },
            |first_debug_info| Ok((specifiers, first_debug_info)),
        )
    }

    pub fn parse_storage_class_specifier<I>(
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<(StorageClassSpecifier, DebugInfo), CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let peeked = tokens.peek().cloned();
        match peeked {
            Some(Token { kind, debug_info }) => match *kind {
                TokenKind::TypeDef => {
                    tokens.next();
                    Ok((StorageClassSpecifier::Typedef, debug_info))
                }
                TokenKind::Extern => {
                    tokens.next();
                    Ok((StorageClassSpecifier::Extern, debug_info))
                }
                TokenKind::Static => {
                    tokens.next();
                    Ok((StorageClassSpecifier::Static, debug_info))
                }
                _ => Err(CompileError::new_expected_failed(
                    Box::new("TokenKind::Typedef".to_string()),
                    Token::new(*kind, debug_info),
                )),
            },
            None => Err(CompileError::new_unexpected_eof(
                None,
                Box::new("ToKenKind::Type(_)"),
            )),
        }
    }
    pub fn parse_enum_specifier<I>(
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<EnumSpec, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let peeked = if let Some(peeked) = tokens.peek_kind() {
            peeked
        } else {
            return Err(CompileError::new_unexpected_eof(
                None,
                Box::new("TokenKind::Ident".to_string()),
            ));
        };
        if matches!(peeked, TokenKind::Ident(_)) {
            // with tag
            let (name, _) = tokens.consume_ident()?;
            if tokens.consume(&TokenKind::OpenDelim(DelimToken::Brace)) {
                // <enumerator-list>
                let list = Self::parse_enumerator_list(tokens)?;
                tokens.expect(&TokenKind::CloseDelim(DelimToken::Brace))?;
                return Ok(EnumSpec::WithList(Some(name), list));
            }
            return Ok(EnumSpec::WithTag(name));
        } else if tokens.consume(&TokenKind::OpenDelim(DelimToken::Brace)) {
            // <enumerator-list>
            let list = Self::parse_enumerator_list(tokens)?;
            tokens.expect(&TokenKind::CloseDelim(DelimToken::Brace))?;
            return Ok(EnumSpec::WithList(None, list));
        }

        match tokens.peek() {
            Some(token) => Err(CompileError::new_expected_failed(
                Box::new("TokenKind::Ident(_) | TokenKind::OpenDelim(DelimToken::Brace)"),
                token.clone(),
            )),
            None => Err(CompileError::new_unexpected_eof(
                None,
                Box::new("TokenKind::Ident(_) | TokenKind::OpenDelim(DelimToken::Brace)"),
            )),
        }
    }

    pub fn parse_enumerator_list<I>(
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Vec<EnumConstant>, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut list = Vec::new();
        loop {
            if matches!(tokens.peek_kind(), Some(TokenKind::Ident(_))) {
                let (ident, debug_info) = tokens.consume_ident().unwrap();
                list.push(EnumConstant { ident, debug_info });
                if !tokens.consume(&TokenKind::Comma) {
                    break;
                }
                if tokens.peek_expect(&TokenKind::CloseDelim(DelimToken::Brace)) {
                    break;
                }

                if tokens.peek_expect(&TokenKind::Comma) {
                    let mut tmp_tokens = tokens.clone();
                    tmp_tokens.next();
                    if Some(TokenKind::CloseDelim(DelimToken::Brace)) == tmp_tokens.peek_kind() {
                        break;
                    }
                    continue;
                }
            } else {
                if tokens.peek_expect(&TokenKind::Comma)
                    || tokens.peek_expect(&TokenKind::CloseDelim(DelimToken::Brace))
                {
                    break;
                }
                if let Some(token) = tokens.next() {
                    return Err(CompileError::new_expected_failed(
                        Box::new("TokenKind::Ident(_)"),
                        token,
                    ));
                }
                return Err(CompileError::new_unexpected_eof(
                    None,
                    Box::new("TokenKind::Ident(_)"),
                ));
            };
        }
        if !tokens.peek_expect(&TokenKind::CloseDelim(DelimToken::Brace)) {
            return Err(CompileError::new_expected_failed(
                Box::new(TokenKind::CloseDelim(DelimToken::Brace)),
                tokens.next().unwrap(),
            ));
        }
        Ok(list)
    }

    pub fn parse_struct_or_union_specifier<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<StructOrUnionSpec, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        if let Ok((name, _)) = tokens.consume_ident() {
            if tokens.consume(&TokenKind::OpenDelim(DelimToken::Brace)) {
                // <struct-declaration-list>
                let list = self.parse_struct_declaration_list(tokens)?;
                tokens.expect(&TokenKind::CloseDelim(DelimToken::Brace))?;
                return Ok(StructOrUnionSpec::WithList(Some(name), list));
            }
            return Ok(StructOrUnionSpec::WithTag(name));
        } else if tokens.consume(&TokenKind::OpenDelim(DelimToken::Brace)) {
            // <struct-declaration-list>
            let list = self.parse_struct_declaration_list(tokens)?;
            tokens.expect(&TokenKind::CloseDelim(DelimToken::Brace))?;
            return Ok(StructOrUnionSpec::WithList(None, list));
        }

        match tokens.peek() {
            Some(token) => Err(CompileError::new_expected_failed(
                Box::new("TokenKind::Ident(_) | TokenKind::OpenDelim(DelimToken::Brace)"),
                token.clone(),
            )),
            None => Err(CompileError::new_unexpected_eof(
                None,
                Box::new("TokenKind::Ident(_) | TokenKind::OpenDelim(DelimToken::Brace)"),
            )),
        }
    }
    pub fn parse_struct_declaration_list<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Vec<StructDeclaration>, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let (ty_spec, debug_info) = self.parse_type_specifier(tokens, true)?;
        let ty_spec = vec![ty_spec];
        let declarator = self.parse_declarator(tokens)?;
        let mut list = vec![StructDeclaration {
            debug_info,
            ty_spec,
            declarator,
        }];
        tokens.expect(&TokenKind::Semi)?;
        while let Ok((ty_spec, debug_info)) = self.parse_type_specifier(tokens, true) {
            let ty_spec = vec![ty_spec];
            let declarator = self.parse_declarator(tokens)?;
            list.push(StructDeclaration {
                debug_info,
                ty_spec,
                declarator,
            });
            tokens.expect(&TokenKind::Semi)?;
        }
        Ok(list)
    }

    pub fn parse_pointer<I>(tokens: &mut TokenStream<I, TokenKind>) -> Result<usize, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut n_star = 0;
        while tokens.consume(&TokenKind::BinOp(BinOpToken::Star)) {
            n_star += 1;
        }
        Ok(n_star)
    }

    #[allow(clippy::too_many_lines)]
    pub fn parse_stmt<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Stmt, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let stmt = if tokens.consume(&TokenKind::Return) {
            // return stmt
            let debug_info = tokens
                .peek_debug_info()
                .ok_or_else(|| CompileError::new_unexpected_eof(None, Box::new(TokenKind::Semi)))?;
            if tokens.consume(&TokenKind::Semi) {
                Ok(Stmt::ret(None, debug_info))
            } else {
                let returning_expr = self.parse_expr_with_new_context(tokens, false)?;
                tokens.expect(&TokenKind::Semi)?;
                Ok(Stmt::ret(Some(returning_expr), debug_info))
            }
        } else if tokens.consume(&TokenKind::If) {
            let debug_info = tokens.expect(&TokenKind::OpenDelim(DelimToken::Paren))?;
            let conditional_expr = self.parse_expr_with_new_context(tokens, false)?;
            tokens.expect(&TokenKind::CloseDelim(DelimToken::Paren))?;
            let then_stmt = self.parse_stmt(tokens)?;
            let else_stmt = if tokens.consume(&TokenKind::Else) {
                Some(self.parse_stmt(tokens)?)
            } else {
                None
            };
            Ok(Stmt::new_if(
                conditional_expr,
                then_stmt,
                else_stmt,
                debug_info,
            ))
        } else if tokens.consume(&TokenKind::While) {
            let debug_info = tokens.expect(&TokenKind::OpenDelim(DelimToken::Paren))?;
            let conditional_expr = self.parse_expr_with_new_context(tokens, false)?;
            tokens.expect(&TokenKind::CloseDelim(DelimToken::Paren))?;
            let then_stmt = self.parse_stmt(tokens)?;
            Ok(Stmt::new_while(conditional_expr, then_stmt, debug_info))
        } else if tokens.consume(&TokenKind::For) {
            let debug_info = tokens.expect(&TokenKind::OpenDelim(DelimToken::Paren))?;
            self.scope.scope_push();
            let init_expr = if tokens.consume(&TokenKind::Semi) {
                None
            } else {
                Some(if tokens.is_starting_declaration(&self.scope) {
                    let declaration = self.parse_declaration(tokens, true)?;
                    tokens.expect(&TokenKind::Semi)?;
                    ForInitKind::Declaration(declaration)
                } else {
                    let expr = self.parse_expr_with_new_context(tokens, false)?;
                    tokens.expect(&TokenKind::Semi)?;
                    ForInitKind::Expr(expr)
                })
            };
            let cond_expr = if tokens.consume(&TokenKind::Semi) {
                None
            } else {
                let expr = self.parse_expr_with_new_context(tokens, false)?;
                tokens.expect(&TokenKind::Semi)?;
                Some(expr)
            };
            let inc_expr = if tokens.consume(&TokenKind::CloseDelim(DelimToken::Paren)) {
                None
            } else {
                let expr = self.parse_expr_with_new_context(tokens, false)?;
                tokens.expect(&TokenKind::CloseDelim(DelimToken::Paren))?;
                Some(expr)
            };
            let then_stmt = self.parse_stmt(tokens)?;
            self.scope.scope_pop();
            Ok(Stmt::new_for(
                init_expr, cond_expr, inc_expr, then_stmt, debug_info,
            ))
        } else if tokens.consume(&TokenKind::OpenDelim(DelimToken::Brace)) {
            self.scope.scope_push();
            let mut stmts = Vec::new();
            let debug_info = tokens
                .peek_debug_info()
                .ok_or_else(|| CompileError::new_unexpected_eof(None, Box::new("statement")))?;
            while !tokens.consume(&TokenKind::CloseDelim(DelimToken::Brace)) {
                stmts.push(self.parse_stmt(tokens)?);
            }
            self.scope.scope_pop();
            Ok(Stmt::new_block(stmts, debug_info))
        } else if tokens.consume(&TokenKind::Switch) {
            let debug_info = tokens.expect(&TokenKind::OpenDelim(DelimToken::Paren))?;
            let expr = self.parse_expr_with_new_context(tokens, false)?;
            tokens.expect(&TokenKind::CloseDelim(DelimToken::Paren))?;
            let stmt = self.parse_stmt(tokens)?;
            Ok(Stmt::new_switch(expr, stmt, debug_info))
        } else if tokens.consume(&TokenKind::Case) {
            let debug_info = tokens
                .peek_debug_info()
                .ok_or_else(|| CompileError::new_unexpected_eof(None, Box::new("Expr")))?;
            let expr = self.parse_expr_with_new_context(tokens, false)?;
            tokens.expect(&TokenKind::Colon)?;
            let stmt = self.parse_stmt(tokens)?;
            Ok(Stmt::new_labeled_stmt(
                LabelKind::Case(expr),
                stmt,
                debug_info,
            ))
        } else if tokens.consume(&TokenKind::Default) {
            let debug_info = tokens.expect(&TokenKind::Colon)?;
            let stmt = self.parse_stmt(tokens)?;
            Ok(Stmt::new_labeled_stmt(
                LabelKind::Default(debug_info.clone()),
                stmt,
                debug_info,
            ))
        } else if tokens.consume(&TokenKind::Break) {
            let debug_info = tokens.peek_debug_info().unwrap();
            tokens.expect(&TokenKind::Semi)?;
            Ok(Stmt {
                kind: StmtKind::Break,
                debug_info,
            })
        } else if tokens.consume(&TokenKind::Continue) {
            let debug_info = tokens.peek_debug_info().unwrap();
            tokens.expect(&TokenKind::Semi)?;
            Ok(Stmt {
                kind: StmtKind::Continue,
                debug_info,
            })
        } else if tokens.is_starting_declaration(&self.scope) {
            let debug_info = tokens
                .peek_debug_info()
                .ok_or_else(|| CompileError::new_unexpected_eof(None, Box::new("Declaration")))?;
            let stmt = Stmt::new_declare(self.parse_declaration(tokens, true)?, debug_info);
            tokens.expect(&TokenKind::Semi)?;
            Ok(stmt)
        } else {
            let debug_info = tokens
                .peek_debug_info()
                .ok_or_else(|| CompileError::new_unexpected_eof(None, Box::new("Expr")))?;
            let expr = self.parse_expr_with_new_context(tokens, false)?;
            tokens.expect(&TokenKind::Semi)?;
            Ok(Stmt::expr(expr, debug_info))
        };
        stmt
    }

    pub fn parse_expr_with_new_context<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
        in_top_func_args: bool,
    ) -> Result<Expr, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        self.context
            .push_ctx(ParserContextKind::TopFuncArgs, in_top_func_args)?;
        let expr = self.parse_expr(tokens)?;
        self.context.pop(ParserContextKind::TopFuncArgs)?;
        Ok(expr)
    }
    pub fn parse_expr<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Expr, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut expr = self.parse_assign(tokens)?;
        if self
            .context
            .in_top_func_args(ParserContextKind::TopFuncArgs)?
        {
            return Ok(expr);
        }
        while tokens.consume(&TokenKind::Comma) {
            let debug_info = expr.debug_info.clone();
            expr = Expr::new_comma(expr, self.parse_assign(tokens)?, debug_info);
        }
        Ok(expr)
    }

    pub fn parse_assign<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Expr, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let lhs = self.parse_conditional(tokens)?;
        let (kind, debug_info) = match tokens.peek() {
            Some(Token { kind, debug_info }) => (kind, debug_info.clone()),
            None => return Err(CompileError::new_unexpected_eof(None, Box::new("Token"))),
        };
        match **kind {
            TokenKind::BinOpEq(assign_token) => {
                tokens.next();
                Ok(Expr::new_assign(
                    lhs,
                    self.parse_assign(tokens)?,
                    assign_token,
                    debug_info,
                ))
            }
            _ => Ok(lhs),
        }
    }

    pub fn parse_conditional<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Expr, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let cond = self.parse_logical_or(tokens)?;
        if tokens.consume(&TokenKind::Question) {
            let then_expr = self.parse_expr(tokens)?;
            tokens.expect(&TokenKind::Colon)?;
            let else_expr = self.parse_conditional(tokens)?;
            let cond_debug_info = cond.debug_info.clone();
            Ok(Expr::new_conditional(
                cond,
                then_expr,
                else_expr,
                cond_debug_info,
            ))
        } else {
            Ok(cond)
        }
    }
    pub fn parse_logical_or<I>(
        &mut self,
        tokens: &mut TokenStream<I, TokenKind>,
    ) -> Result<Expr, CompileError>
    where
        I: Clone + Debug + Iterator<Item = Token<TokenKind>>,
    {
        let mut lhs = self.parse_logical_and(tokens)?;
        while tokens.consume(&TokenKind::BinOp(BinOpToken::VerticalVertical)) {
            let rhs = self.parse_logical_and(tokens)?;
            let debug_info = lhs.debug_info.clone();
            lhs = Expr::new_binary(BinOpKind::LogicalOr, lhs, rhs, debug_info);
        }
        Ok(lhs)
    }
